# ppois

lab_1/markov/: CMakeLists.txt  MarkovTests.h  cov.sh  markov_test.cpp
lab_1/turing/: Tape.cpp  Tape.h  TapeTests.h  TransitionRule.cpp  TransitionRule.h  TuringMachineTests.h  turing_test.cpp
lab_2/: README.md
lab_2/details/: Assembly.py  Detail.py  Disk.py
lab_2/exceptions/: ExportDirectionError.py  ImportDirectionError.py  MachineAlreadyRunningError.py  NoImportModuleError.py
lab_2/machines/: Machine.py  WheelAssemblyMachine.py
lab_2/manufactoring/: FactoryExport.py  FactoryImport.py
lab_2/staff/: Accountant.py  Employee.py  GeneralManager.py  Lawyer.py  Manager.py  Security.py  Smm.py
lab_2/tests/: conftest.py  test_production_line_and_worker.py  test_staff_and_misc.py
lab_2/warehouse/: Condition.py  DeliveryTruk.py  MaterialStorageCell.py  Supplier.py  Warehouse.py
lab_3/: README.md
lab_3/community/: ChannelProfile.py
lab_3/content/: Comment.py  Hashtag.py  Like.py  MusicTrack.py  PrivateStory.py  Reels.py  Story.py
lab_3/database/: Database.py  MusicDatabase.py  ReelsDatabase.py  StoryDatabase.py  SubscriptionDatabase.py  UserDatabase.py
lab_3/exceptions/: EntityAlreadyExistsException.py  InsufficientPermissionsException.py
lab_3/recommendations/: MusicRecommendation.py  PostRecommendations.py  ReelsRecommendation.py  StoryRecommendations.py
lab_3/search/: ReelsSearch.py  SearchQuery.py  SubscriptionSearch.py
lab_3/security/: PasswordHasher.py  TwoFactorAuth.py
lab_3/subscription/: Friend.py
lab_3/tests/: test_media_file.py  (+3 more)
(+153 files in other folders)
